Fixed word-wrapping in tables

--- a/client/style.css
+++ b/client/style.css
@@ -5909,6 +5909,9 @@ a:hover {
   border-radius: 0;
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 4px; }
+  .table tbody td {
+    word-break: break-all;
+    word-wrap: break-word; }
   .table tbody tr:hover {
     background-color: rgba(0, 0, 0, 0.2); }
 
