--- a/client/styles/_reset.scss
+++ b/client/styles/_reset.scss
@@ -23,6 +23,11 @@ a {
 
 
   tbody {
+
+    td {
+      word-break: break-all;
+      word-wrap:break-word;
+    }
     tr {
       &:hover {
         background-color: rgba(0, 0, 0, 0.2);
